--- a/views/partials/user/dashboard_sideBar.ejs
+++ b/views/partials/user/dashboard_sideBar.ejs
@@ -1,4 +1,4 @@
-<aside class="bg-orange-100 p-6 w-1/5">
+<aside class="bg-orange-100 sticky h-screen top-0 p-6 w-1/5">
     <div class="mb-6 flex flex-col justify-center text-center w-full">
         <h2 class="text-xl font-bold mb-3 bg-orange-200 p-2 rounded">Account</h2>
         <ul class="flex flex-col mx-auto justify-center w-4/5">
