--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -305,7 +305,7 @@
         } catch (error) {
             console.error(error)
             Toastify({
-                text: response.data,
+                text: error.response.data,
                 duration: 3000,
                 gravity: "top",
                 position: "right",
